libs/preprocessor/tests/errors/pe1_unexpected_token/stderr.ansi
[0m[1m[38;5;9merror[PE1][0m[1m: unexpected token[0m
  [0m[36m┌─[0m source.hpp:1:19
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #define HELLO(var1[0m[31m;[0m var2) Hello var1 var2
  [0m[36m│[0m                   [0m[31m^[0m [0m[31munexpected token `;`[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: expected one of: [33m, )[0m

